# piper_with_pica

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: mock_piper.yaml  pick_up_the_corn_and_put_it_on_the_plate.yaml  pika_sense_piper.example.yaml  piper_d405_d435.example.yaml  piper_d405_d435.yaml
docs/: 2026-07-18_01_架构与数据契约.md  2026-07-18_02_Pika_Sense遥操采集流程.md  2026-07-19_01_遥操脚本与现场操作说明.md  2026-07-20_01_遥操收尾与轨迹检查.md  2026-07-20_02_轨迹可视化查看器.md  2026-07-20_03_重复遥操响应与RViz.md  2026-07-20_04_轨迹保留与删除.md  2026-07-20_05_ROS收尾优化试验.md  2026-07-21_01_轨迹查看器时序细节.md  2026-07-21_02_单条轨迹数据包说明.md  architecture.md  project_handover.md  使用说明.md  项目交接.md
scripts/: read_piper_state.py
src/taiyi_piper_collect/: __init__.py  cli.py  collector.py  config.py  encoding.py  errors.py  models.py  piper_state.py  preflight.py  quality.py  teleop_processes.py  teleop_session.py  trajectory_viewer.py  writer.py
src/taiyi_piper_collect/devices/: __init__.py  base.py  factory.py  mock.py  piper.py  piper_motion.py  realsense.py
tests/: test_config.py  test_pipeline.py  test_piper_math.py  test_piper_motion.py  test_teleop_processes.py  test_teleop_session.py  test_trajectory_viewer.py
